# sdfg

./: .gitignore  mkdocs.yml  setup.cfg
.github/: rename_project.sh
docs/api/: DummyTransformer.md
examples/DummyTransformer/: DummyTransformer_example.ipynb
sdfg/: version.py
sdfg/dummy/: __init__.py
test/dummy_tests/: test_dummy.py
