[metadata]
name = sdfg
description_file = README.md
long_description_content_type = text/markdown
author = NilsWinter
author_email = insert_your@email
url = https://github.com//sdfg/
keywords=
    machine learning
    deep learning
project_urls=
    Source Code = https://github.com/NilsWinter/sdfg/
    Documentation = https://NilsWinter.github.io/sdfg/
    Bug Tracker = https://github.com/NilsWinter/sdfg/issues

download_url=https://pypi.org/project/sdfg/#files

[files]
packages = sdfg